syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "CoursesGRPCClient";

service GrpcCoursesService {
  // Courses
  rpc GetCourse (GrpcGetCourseRequest) returns (GrpcCourseResponse);
  rpc ListCourses (GrpcListCoursesRequest) returns (GrpcListCoursesResponse);
}

// Requests
message GrpcGetCourseRequest {
  string id = 1;
  repeated string EnrolledClasses = 2;
  bool showAll = 3;
}

message GrpcListCoursesRequest {
  int32 page = 1;
  int32 pageSize = 2;
  optional string query = 3;
  repeated string EnrolledClasses = 4;
  bool showAll = 5;
}

// Responses
message GrpcCourseResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  int32 totalStudents = 4;
}

message GrpcListCoursesResponse {
  repeated GrpcCourseResponse Items = 1;
  int32 currentPage = 2;
  int32 totalPages = 3;
  int32 pageSize = 4;
  int32 totalCount = 5;
}

